<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/formulario_alias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formulario_alias" />

    <EditText
        android:id="@+id/formulario_alias_respuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/formulario_alias"
        android:ems="10" />

    <Button
        android:id="@+id/boton_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boton_foto"
        android:layout_marginRight="32dp"
        android:layout_marginTop="26dp"
        android:layout_toLeftOf="@+id/boton_cancelar"
        android:text="@string/boton_guardar" />

    <Button
        android:id="@+id/boton_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/boton_guardar"
        android:layout_alignBottom="@+id/boton_guardar"
        android:layout_alignParentRight="true"
        android:layout_marginRight="56dp"
        android:text="@string/boton_cancelar" />

</RelativeLayout>